Fixed filename column length wrapping issue

--- a/webapp/src/main/webapp/assets/stylesheets/bs-study-detail-1.0.150301.css
+++ b/webapp/src/main/webapp/assets/stylesheets/bs-study-detail-1.0.150301.css
@@ -217,3 +217,6 @@ img.thumbnail {
     border: 0px !important;
 }
 
+th.filesize {
+    width:55px;
+}
